medidas de distancia

--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +151,40 @@
    "source": [
     "print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distancias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def euclidiana(x,y):\n",
+    "    return np.sqrt(np.sum(x**2+y**2))\n",
+    "\n",
+    "def coseno(x,y): \n",
+    "    num = np.dot(x,y)\n",
+    "    den = np.sqrt((x**2).sum())*np.sqrt((y**2).sum())\n",
+    "    return num/den\n",
+    "\n",
+    "def chi_cuadrado(x,y):\n",
+    "    x_t = x.sum()\n",
+    "    y_t = y.sum()\n",
+    "    c = x + y\n",
+    "    x_esperado = x_t*c/(x_t+y_t)\n",
+    "    y_esperado = y_t*c/(x_t+y_t)\n",
+    "    \n",
+    "    return (((x-x_esperado)**2)/x_esperado).sum() + (((y-y_esperado)**2)/y_esperado).sum()\n",
+    "    \n",
+    "def cramer(x,y):\n",
+    "    return(np.sqrt(chi_cuadrado(x,y)/(x.sum() + y.sum())))"
+   ]
   }
  ],
  "metadata": {
@@ -173,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
