--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,8 @@
     "\n",
     "import cv2\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import normalize\n"
    ]
   },
   {
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +58,14 @@
     "        histH = []\n",
     "        histS = []\n",
     "        histV = []\n",
-    "        for y in range(0, rows, n):\n",
-    "            for x in range(0, cols, n):\n",
+    "        for y in range(0, rows, int(rows/n)):\n",
+    "            for x in range(0, cols, int(cols/n)):\n",
     "                celda = self.img[y:y+n, x:x+n, 0]\n",
-    "                histH.append(np.histogram(celda, bins=np.linspace(0,255,8)))\n",
+    "                histH.append(np.histogram(celda, bins=8)[0])\n",
     "                celda = self.img[y:y+n, x:x+n, 1]\n",
-    "                histS.append(np.histogram(celda, bins=np.linspace(0,255,12)))\n",
+    "                histS.append(np.histogram(celda, bins=12)[0])\n",
     "                celda = self.img[y:y+n, x:x+n, 2]\n",
-    "                histV.append(np.histogram(celda, bins=np.linspace(0,255,3))) \n",
+    "                histV.append(np.histogram(celda, bins=3)[0]) \n",
     "        \n",
     "        self.histogramas[nombre+'_H'] = np.array(histH)\n",
     "        self.histogramas[nombre+'_S'] = np.array(histS)\n",
@@ -74,82 +75,27 @@
     "        self.division(3)\n",
     "        self.division(4)\n",
     "        self.division(6)\n",
+    "        \n",
+    "        h = np.array([],dtype=int)\n",
+    "        for key in self.histogramas.keys():\n",
+    "            h = np.concatenate([h,self.histogramas[key].reshape(-1)])\n",
+    "        return h\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 149,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1920000\n",
-      "1920000\n",
-      "1920000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = os.getcwd() + '\\jpg'\n",
     "img = path + '\\\\130000.jpg'\n",
     "\n",
     "a = Imagen(img)\n",
-    "a.calcularVectorCaracteristicas()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 2 is out of bounds for axis 1 with size 2",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-51-e8bbc81ef3dd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhistogramas\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'3x3_H'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m: index 2 is out of bounds for axis 1 with size 2"
-     ]
-    }
-   ],
-   "source": [
-    "print(a.histogramas['3x3_H'][1,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  0.          36.42857143  72.85714286 109.28571429 145.71428571\n",
-      " 182.14285714 218.57142857 255.        ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.linspace(0,255,8))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print()"
+    "hist = a.calcularVectorCaracteristicas()\n"
    ]
   },
   {
@@ -184,6 +130,33 @@
     "    \n",
     "def cramer(x,y):\n",
     "    return(np.sqrt(chi_cuadrado(x,y)/(x.sum() + y.sum())))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Content Based Image Retrieval (CBIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class CBIR():\n",
+    "    \n",
+    "    def __init__(self, distance):\n",
+    "        self.distance = distance\n",
+    "        self.database = list()\n",
+    "    \n",
+    "    def train(X):\n",
+    "        for image in X:\n",
+    "            self.database.append(Imagen(X).calcularVectorCaracteristicas())\n",
+    "    def evaluar(Input):\n",
+    "        scores = [self.distance(Input, x) for x in self.database]"
    ]
   }
  ],
