Se agrega división imagen en formas no rectangulares

--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -18,17 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import copy\n",
+    "import time\n",
     "\n",
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import normalize\n"
+    "\n",
+    "from sklearn.preprocessing import normalize"
    ]
   },
   {
@@ -40,10 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "class Imagen():\n",
     "    \n",
     "    def __init__(self, path):\n",
@@ -51,6 +55,7 @@
     "        self.img = cv2.imread(path)\n",
     "        self.img = cv2.cvtColor(self.img, cv2.COLOR_BGR2HSV)\n",
     "        self.histogramas = dict()\n",
+    "        self.asd = dict()\n",
     "        \n",
     "    def division(self, n=3):\n",
     "        nombre = '%sx%s'%(n,n)\n",
@@ -66,15 +71,71 @@
     "                histS.append(np.histogram(celda, bins=12)[0])\n",
     "                celda = self.img[y:y+n, x:x+n, 2]\n",
     "                histV.append(np.histogram(celda, bins=3)[0]) \n",
-    "        \n",
+    "                \n",
     "        self.histogramas[nombre+'_H'] = np.array(histH)\n",
     "        self.histogramas[nombre+'_S'] = np.array(histS)\n",
     "        self.histogramas[nombre+'_V'] = np.array(histV)\n",
     "        \n",
+    "    def divisionNoRectangular(self):\n",
+    "        \n",
+    "        reg1 = []\n",
+    "        reg2 = []\n",
+    "        reg3 = []\n",
+    "        reg4 = []\n",
+    "        reg5 = []\n",
+    "        rows, cols, _ =self.img.shape\n",
+    "        \n",
+    "        for x in range(cols):\n",
+    "            for y in range(rows):\n",
+    "                pertenencia = self.elipse(x,y)\n",
+    "                if pertenencia == 5:\n",
+    "                    reg5.append(self.img[y,x,:])\n",
+    "                elif pertenencia == 1:\n",
+    "                    reg1.append(self.img[y,x,:])\n",
+    "                \n",
+    "                elif pertenencia == 2:\n",
+    "                    reg2.append(self.img[y,x,:])\n",
+    "                \n",
+    "                elif pertenencia == 3:\n",
+    "                    reg3.append(self.img[y,x,:])\n",
+    "                \n",
+    "                else:\n",
+    "                    reg4.append(self.img[y,x,:])\n",
+    "        \n",
+    "        reg1 = np.array(reg1)\n",
+    "        reg2 = np.array(reg2)\n",
+    "        reg3 = np.array(reg3)\n",
+    "        reg4 = np.array(reg4)\n",
+    "        reg5 = np.array(reg5)\n",
+    "        canal = ['H', 'S', 'V']\n",
+    "        bins = [8, 12, 3]\n",
+    "        \n",
+    "        for (n,c,b) in zip(range(3),canal,bins):\n",
+    "            self.histogramas['reg1_'+c] = np.histogram(reg1[:,n], bins=b)[0]\n",
+    "            self.histogramas['reg2_'+c] = np.histogram(reg2[:,n], bins=b)[0]\n",
+    "            self.histogramas['reg3_'+c] = np.histogram(reg3[:,n], bins=b)[0]\n",
+    "            self.histogramas['reg4_'+c] = np.histogram(reg4[:,n], bins=b)[0]\n",
+    "            self.histogramas['reg5_'+c] = np.histogram(reg5[:,n], bins=b)[0]\n",
+    "        \n",
+    "    def elipse(self,x,y):\n",
+    "        rows, cols, _ = self.img.shape\n",
+    "        b = rows / 2\n",
+    "        a = cols / 2\n",
+    "        dentro = 1 if (x-a)**2/((a-10)**2) + (y - b)**2/((b-10)**2) < 1 else 0\n",
+    "        \n",
+    "        region1 = int(not dentro and x < a and y < b)\n",
+    "        region2 = 2 * int(not dentro and x >= a and y < b)\n",
+    "        region3 = 3 * int(not dentro and x < a and y >= b)\n",
+    "        region4 = 4 * int(not dentro and x >= a and y >= b)\n",
+    "        region5 = 5 * int(dentro)\n",
+    "        \n",
+    "        return region1 + region2 + region3 + region4 + region5\n",
+    "    \n",
     "    def calcularVectorCaracteristicas(self):\n",
     "        self.division(3)\n",
     "        self.division(4)\n",
     "        self.division(6)\n",
+    "        self.divisionNoRectangular()\n",
     "        \n",
     "        h = np.array([],dtype=int)\n",
     "        for key in self.histogramas.keys():\n",
@@ -85,17 +146,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 146,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.607273101806641\n"
+     ]
+    }
+   ],
    "source": [
     "path = os.getcwd() + '\\jpg'\n",
     "img = path + '\\\\130000.jpg'\n",
     "\n",
+    "t = time.time()\n",
     "a = Imagen(img)\n",
-    "hist = a.calcularVectorCaracteristicas()\n"
+    "hist = a.calcularVectorCaracteristicas()\n",
+    "t2 = time.time()\n",
+    "print('tiempo de procesamiento para calcut2-t)"
    ]
   },
   {
@@ -107,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,11 +213,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class CBIR():\n",
     "    \n",
     "    def __init__(self, distance):\n",
@@ -158,6 +229,13 @@
     "    def evaluar(Input):\n",
     "        scores = [self.distance(Input, x) for x in self.database]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -180,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
